@@ -1,6 +1,7 @@
 ===========================================================================
 5.7
 
+Added: if @Parameter is missing from testng.xml then it is read from Sys env.
 Fixed: Don't run a @DataProvider method as a test when a class-level @Test is present
 Added: Attribute @Test#skipFailedInvocations
 Fixed: TESTNG-169 Error message: <method> is depending on nonexistent method null ("null" is uninformative)
